k8s/profile-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-query
  namespace: profile-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile-query
  template:
    metadata:
      labels:
        app: profile-query
    spec:
      containers:
        - name: profile-query
          image: profile-query:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: profile-query
  namespace: profile-ms
spec:
  type: LoadBalancer
  selector:
    app: profile-query
  ports:
    - port: 3000
      targetPort: 3000
